Added texture loader

--- a/planet.ini
+++ b/planet.ini
@@ -1,7 +1,8 @@
 [planetapp]
-resetmass = 50
 defaultsunmass = 1000
-planetmass = 10
-showforcemode = 0
+showforcemode = 1
+resetmass = 50
 gravity = 2
+showforcelimit = 5
+planetmass = 10
 
