--- a/planet.ini
+++ b/planet.ini
@@ -1,9 +1,10 @@
 [planetapp]
 defaultsunmass = 1000
+trajectorylength = 250
 showforcemode = 1
-showtrajectorymode = 0
-resetmass = 50
-gravity = 2
 showforcelimit = 5
+resetmass = 50
+showtrajectorymode = 1
 planetmass = 10
+gravity = 2
 
